clmpkg/objects/OpportunityStagesLookup__mdt.object
<CustomObject>
    <description>This drives the opportunity stage names based on Approval Status, Status Category on Apttus Agreements</description>
    <fields>
        <fullName>Agreement_Status__c</fullName>
        <label>Agreement Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage__c</fullName>
        <label>Opportunity Stage</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StatusCheckRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>StatusCheckRequired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status_Category__c</fullName>
        <label>Status Category</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>OpportunityStagesLookup</label>
    <listViews>
        <fullName>All</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>NamespacePrefix</columns>
        <columns>Agreement_Status__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>Opportunity_Stage__c</columns>
        <columns>Status_Category__c</columns>
        <columns>StatusCheckRequired__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>OpportunityStagesLookups</pluralLabel>
</CustomObject>